--- a/resources/css/estilos_catalogo.css
+++ b/resources/css/estilos_catalogo.css
@@ -46,13 +46,14 @@ li{
 .nav-bar {
     float: left;
     width: 20%;
-    background: #ccc;
+    background-color: #ccc;
     padding: 20px;
 }
 article {
-    float: left;
+    float: right;
+    margin-left: -210px;
     width: 80%;
-    background-color: #f1f1f1;
+    background-color: #ccc;
 }
 
 section:after {
@@ -61,7 +62,10 @@ section:after {
     clear: both;
 }
 
-/*imagenes de flora*/
+/*imagenes del catalogo*/
+#contenido{
+    background-color: #ccc;
+}
 .flex-catalogo > div {
     background-color:white;
     width: 300px;
