--- a/resources/css/estilos_catalogo.css
+++ b/resources/css/estilos_catalogo.css
@@ -46,14 +46,13 @@ li{
 .nav-bar {
     float: left;
     width: 20%;
-    background-color: #ccc;
+    background: #ccc;
     padding: 20px;
 }
 article {
-    float: right;
-    margin-left: -210px;
+    float: left;
     width: 80%;
-    background-color: #ccc;
+    background-color: #f1f1f1;
 }
 
 section:after {
@@ -62,10 +61,7 @@ section:after {
     clear: both;
 }
 
-/*imagenes del catalogo*/
-#contenido{
-    background-color: #ccc;
-}
+/*imagenes de flora*/
 .flex-catalogo > div {
     background-color:white;
     width: 300px;
